# yart

./: .gitignore  README.md  hello.py  pyproject.toml  tmp-distil.ipynb
examples/: example-0410-2.yaml  example-0410-mb-500k-bce.yaml  example-0410-mb-all-1M.yaml  example-0410-mb-all.yaml  example-0410-mb-emb-bce-miracl.yaml  example-0410-mb-emb-bce.yaml  example-0410-mb-emb.yaml  example-0410-mb.yaml  example.yaml  exp313.yaml  exp314.yaml  exp315.yaml  exp316.yaml  exp317.yaml  exp318.yaml  exp319.yaml  exp320.yaml  exp321.yaml  exp322.yaml  exp323.yaml  exp324.yaml  exp325.yaml  exp326.yaml  exp327.yaml  exp328.yaml  exp329.yaml  exp330.yaml  exp332.yaml  exp333.yaml  exp334.yaml  exp335.yaml  exp336.yaml  exp337.yaml  exp338.yaml  exp339.yaml  exp340.yaml  exp341.yaml  exp342.yaml  exp343.yaml  exp344.yaml  (+11 more)
nb/: bench_time.py  bench_time_transformers.py  example.ipynb  example_ce.ipynb  mb-distil.ipynb  onnx_load.ipynb  ruri-distil.ipynb  to_onnx.ipynb
yart/: arguments.py  data.py  log_metrics.py  losses.py  run.py  trainer.py  utils.py
yart/custom_dataset/: gotcha.py  hpprc_emb_scores.py  japanese_splade_hn_v1.py  jfwir.py  jlawir.py  mmarco.py
