[project]
name = "yart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "joblib>=1.4.2",
    "numpy>=2.2.4",
    "pyyaml>=6.0.2",
    "sentence-transformers>=4.0.2",
    "sentencepiece>=0.2.0",
    "torch==2.7.0",
    "torchvision",
    "torchaudio",
    "pytorch-triton",
    "transformers~=4.50.1",
    "wandb>=0.19.9",
    "hatchling>=1.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["yart"]


[tool.uv.sources]
torch = [
  { index = "pytorch-2-7" },
]
torchvision = [
  { index = "pytorch-2-7" },
]
torchaudio = [
  { index = "pytorch-2-7" },
]
pytorch-triton = [
  { index = "pytorch-2-7" },
]

[[tool.uv.index]]
name = "pytorch-2-7"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true

